# linear-regression-model

./: .gitignore  pyproject.toml
notebooks/: 2210573_HEX_Lab6_1.ipynb  2210573_HEX_Lab6_2.ipynb
src/linear_regression_model/: __init__.py  main.py  model.py
src/linear_regression_model/model/: linear_regression.py  logistic_regression.py
src/linear_regression_model/util/: logger.py
tests/: test_1.py  test_linear_regression.py  test_logistic_regression.py
