[project]
name = "linear-regression-model"
version = "0.1.0"
description = ""
authors = [
    {name = "trungdung1711",email = "trungdunglebui17112004@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "kaggle (>=1.7.4.5,<2.0.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "numpy (>=2.3.3,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (>=1.7.2,<2.0.0)"
]

[tool.poetry]
packages = [{include = "linear_regression_model", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.0.1,<8.0.0)"
]
